--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "react-portfolio",
+    "name": "My Portfolio",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://sonaojus.github.io/",
     "dependencies": {
         "bootstrap": "^5.2.3",
         "emailjs-com": "^3.2.0",
