--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "My Portfolio",
+    "name": "my_portfolio",
     "version": "0.1.0",
     "private": true,
     "homepage": "https://sonaojus.github.io/",
